--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 				<li><a href="#one" class="active">About</a></li>
 				<li><a href="#two">Me</a></li>
 				<li><a href="#three">Important</a></li>
+				<li><a href="#five">Projects</a></li>
 				<li><a href="#four">Contact</a></li>
 			</ul>
 		</nav>
@@ -65,7 +66,8 @@
 					<p>
 						Relaxed individual willing to put any work that is needed. blah blah blah blah fill in more info?
 					</p>
-					<a class="image"><img src="images/PXL_20230929_181135276.jpg" width="300px" data-position="left" class="left fit" alt="..."></a>
+					<a class="image"><img src="images/PXL_20230929_181135276.jpg" width="300px" data-position="left"
+							class="left fit" alt="..."></a>
 					<div>
 						<h5>I love taking in Nature, it just relaxes the soul.</h5>
 					</div>
@@ -135,6 +137,48 @@
 					</div>
 				</div>
 			</section>
+			<!-- Five -->
+			<section id="five">
+				<div class="container">
+					<h3>Projects</h3>
+					<p>
+						Below you'll find my some of my projects that I've done.
+					</p>
+					<div class="features">
+						<article>
+							<!--portfolio-->
+							<a href="solarviewIndex.html" target="_blank" class="image"><img src="MidtermImages/logo transparent.png"
+									alt="..."></a>
+							<div class="inner">
+								<h4>SolarViewDesign Rework</h4>
+								<p>
+									(last updated: 10/30/2023)
+								</p>
+							</div>
+						</article>
+						<!-- <article>
+							<a href="images/Resume.pdf" download class="image"><img src="images/envelop.png" alt=".."></a>
+							<div class="inner">
+								<h4>Resume</h4>
+								<p>
+									(last updated: 9/29/2023)
+								</p>
+							</div>
+						</article> -->
+						<!-- <article>
+							<a href="https://github.com/RankenTechnicalCollege/allcoursework-Leon-JulianHoneycutt" target="_blank"
+								class="image"><img src="images/ranken.jpg" alt="."></a>
+							<div class="inner">
+								<h4>Coursework</h4>
+								<p>
+									(last updated: 9/29/2023)
+								</p>
+							</div>
+						</article> -->
+					</div>
+				</div>
+			</section>
+			<!-- Five -->
 
 			<!-- Four -->
 			<div id="four">
