--- a/products.html
+++ b/products.html
@@ -9,14 +9,22 @@
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="normalize.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Agbalumo&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="general.css">
+  <style>
+    .solarViewDesignFont{
+      font-family: 'Agbalumo', sans-serif;
+    }
+  </style>
 </head>
 
 <body>
   <header class="sticky-top">
     <nav class="navbar navbar-expand-md backgroundNav border-bottom border-5 border-light">
       <div class="container-fluid">
-        <a class="navbar-brand navTextColor" href="Index.html"><img class="sizing smaller"
+        <a class="navbar-brand navTextColor solarViewDesignFont" href="solarviewIndex.html"><img class="sizing smaller"
             src="MidtermImages/logo transparent.png" alt="SolarViewDesign Logo">SolarViewDesign</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,7 +33,7 @@
         <div class="collapse navbar-collapse d-md-flex justify-content-md-end" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link navTextColor" aria-current="page" href="Index.html">Home</a>
+              <a class="nav-link navTextColor" aria-current="page" href="solarviewIndex.html">Home</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle navTextColor" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -59,7 +67,7 @@
   <main id="main" class="mainBackgroundColor">
     <div id="featuredCarousel" class="container py-4">
       <div class="p-3 mb-4 backgroundContainers rounded-3">
-        <h2 class="d-flex justify-content-center navTextColor border-bottom border-5 fs-2">FEATURED</h2>
+        <h2 class="d-flex justify-content-center navTextColor border-bottom border-5 fs-2 solarViewDesignFont">FEATURED</h2>
         <div id="carouselExampleCaptions" class="carousel slide border border-5 border-dark" data-bs-ride="false">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -111,7 +119,7 @@
     </div>
     <div id="blinds" class=" container-fluid mt-3 pb-4">
       <div class="container-fluid backgroundContainers rounded-4 pb-3 d-flex flex-column">
-        <h2 class="align-self-center mb-3 navTextColor">Blinds</h2>
+        <h2 class="align-self-center mb-3 navTextColor solarViewDesignFont">Blinds</h2>
         <div class="container-fluid containersOnTopOfBackgroundContainers rounded-4 pb-3 pt-3 d-flex flex-column">
           <div class="row mx-2 gy-3 gy-md-3 gy-xl-5 gy-lg-4">
             <div class="col-lg-4 col-12 d-flex">
@@ -150,7 +158,7 @@
     </div>
     <div id="shades" class=" container-fluid mt-3 pb-4">
       <div class="container-fluid backgroundContainers rounded-4 pb-3 d-flex flex-column">
-        <h2 class="align-self-center mb-3 navTextColor">Shades</h2>
+        <h2 class="align-self-center mb-3 navTextColor solarViewDesignFont">Shades</h2>
         <div class="container-fluid containersOnTopOfBackgroundContainers rounded-4 pb-3 pt-3 d-flex flex-column">
           <div class="row mx-2 gy-3 gy-md-3 gy-xl-5 gy-lg-4">
             <div class="col-lg-4 col-12 d-flex">
@@ -189,7 +197,7 @@
     </div>
     <div id="shutters" class="container-fluid mt-3 pb-4">
       <div class="container-fluid backgroundContainers rounded-4 pb-3 d-flex flex-column">
-        <h2 class="align-self-center mb-3 navTextColor">Shutters</h2>
+        <h2 class="align-self-center mb-3 navTextColor solarViewDesignFont">Shutters</h2>
         <div class="container-fluid containersOnTopOfBackgroundContainers rounded-4 pb-3 pt-3 d-flex flex-column">
           <div class="row mx-2 gy-3 gy-md-3 gy-xl-5 gy-lg-4">
             <div class="col-lg-4 col-12 d-flex">
@@ -228,7 +236,7 @@
     </div>
     <div id="motorization" class=" container-fluid mt-3 pb-4">
       <div class="container-fluid backgroundContainers rounded-4 pb-3 d-flex flex-column">
-        <h2 class="align-self-center mb-3 navTextColor">Motorization &amp; Automation</h2>
+        <h2 class="align-self-center mb-3 navTextColor solarViewDesignFont">Motorization &amp; Automation</h2>
         <div class="container-fluid containersOnTopOfBackgroundContainers rounded-4 pb-3 pt-3 d-flex flex-column">
           <div class="row mx-2 gy-3 gy-md-3 gy-xl-5 gy-lg-4">
             <div class="col-lg-4 col-12 d-flex">
@@ -274,7 +282,7 @@
             <a href="#main"><img class="footerImage" src="MidtermImages/logo transparent.png" alt="PLACEHOLDER"></a>
           </div>
           <div class="col-md-4">
-            <h5>SolarViewDesign</h5>
+            <h5 class="solarViewDesignFont">SolarViewDesign</h5>
             <ul class="nav flex-column">
               <!-- <li class="nav-item mb-2"><a href="#" class="nav-link p-0 footerTextColor footerHoverColor">Number(PLACEHOLDER)</a></li> -->
               <li class="nav-item mb-2"><a href="mailto:info@solarviewdesign.com" class="nav-link p-0 footerTextColor footerHoverColor">info@solarviewdesign.com</a></li>
