--- a/gallery.html
+++ b/gallery.html
@@ -9,14 +9,22 @@
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="normalize.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Agbalumo&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="general.css">
+  <style>
+    .solarViewDesignFont{
+      font-family: 'Agbalumo', sans-serif;
+    }
+  </style>
 </head>
 
 <body>
   <header class="sticky-top">
     <nav class="navbar navbar-expand-md backgroundNav border-bottom border-5 border-light">
       <div class="container-fluid">
-        <a class="navbar-brand navTextColor" href="Index.html"><img class="sizing smaller"
+        <a class="navbar-brand navTextColor solarViewDesignFont" href="solarviewIndex.html"><img class="sizing smaller"
             src="MidtermImages/logo transparent.png" alt="SolarViewDesign Logo">SolarViewDesign</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,7 +33,7 @@
         <div class="collapse navbar-collapse d-md-flex justify-content-md-end" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link navTextColor" aria-current="page" href="Index.html">Home</a>
+              <a class="nav-link navTextColor" aria-current="page" href="solarviewIndex.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link navTextColor" href="products.html">Products</a>
@@ -50,7 +58,7 @@
   <main id="main" class="mainBackgroundColor">
     <div class=" container-fluid mt-3 mb-3">
       <div class="container-fluid backgroundContainers borderColor rounded-4 pb-3 pt-3 d-flex flex-column">
-        <h2 class="align-self-center mb-3 navTextColor">Gallery</h2>
+        <h2 class="align-self-center mb-3 navTextColor solarViewDesignFont">Gallery</h2>
       </div>
     </div>
     <div id="Gallery" class=" container-fluid mt-3 pb-4">
@@ -106,7 +114,7 @@
             <a href="#main"><img class="footerImage" src="MidtermImages/logo transparent.png" alt="PLACEHOLDER"></a>
           </div>
           <div class="col-md-4">
-            <h5>SolarViewDesign</h5>
+            <h5 class="solarViewDesignFont">SolarViewDesign</h5>
             <ul class="nav flex-column">
               <!-- <li class="nav-item mb-2"><a href="#" class="nav-link p-0 footerTextColor footerHoverColor">Number(PLACEHOLDER)</a></li> -->
               <li class="nav-item mb-2"><a href="mailto:info@solarviewdesign.com" class="nav-link p-0 footerTextColor footerHoverColor">info@solarviewdesign.com</a></li>
