--- a/residential.html
+++ b/residential.html
@@ -7,13 +7,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Agbalumo&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="general.css">
+    <style>
+      .solarViewDesignFont{
+        font-family: 'Agbalumo', sans-serif;
+      }
+    </style>
   </head>
   <body>
     <header class="sticky-top">
       <nav class="navbar navbar-expand-md backgroundNav border-bottom border-5 border-light">
         <div class="container-fluid">
-          <a class="navbar-brand navTextColor" href="Index.html"><img class="sizing smaller"
+          <a class="navbar-brand navTextColor solarViewDesignFont" href="solarviewIndex.html"><img class="sizing smaller"
               src="MidtermImages/logo transparent.png" alt="SolarViewDesign Logo">SolarViewDesign</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,7 +30,7 @@
           <div class="collapse navbar-collapse d-md-flex justify-content-md-end" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link navTextColor" aria-current="page" href="Index.html">Home</a>
+                <a class="nav-link navTextColor" aria-current="page" href="solarviewIndex.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link navTextColor" href="products.html">Products</a>
@@ -48,7 +56,7 @@
       <div class="container-fluid py-4">
         <div class="p-5 mb-4 backgroundNav rounded-3 row">
           <div class="container-fluid py-5 col-lg-6 col-12 flex-column">
-            <h1 class="display-5 fw-bold navTextColor">Free Professional In Home Consultation</h1>
+            <h1 class="display-5 fw-bold navTextColor solarViewDesignFont">Free Professional In Home Consultation</h1>
             <p class="col-md-8 fs-4 navTextColor">Our in-home consultations last approximately <strong> 20-minutes to one
               hour.</strong> We will provide you with personalized recommendations for your home.<br><br>
             <strong> All
@@ -71,7 +79,7 @@
               <a href="#main"><img class="footerImage" src="MidtermImages/logo transparent.png" alt="PLACEHOLDER"></a>
             </div>
             <div class="col-md-4">
-              <h5>SolarViewDesign</h5>
+              <h5 class="solarViewDesignFont">SolarViewDesign</h5>
               <ul class="nav flex-column">
                 <!-- <li class="nav-item mb-2"><a href="#" class="nav-link p-0 footerTextColor footerHoverColor">Number(PLACEHOLDER)</a></li> -->
                 <li class="nav-item mb-2"><a href="mailto:info@solarviewdesign.com" class="nav-link p-0 footerTextColor footerHoverColor">info@solarviewdesign.com</a></li>
