--- a/solarviewIndex.html
+++ b/solarviewIndex.html
@@ -155,7 +155,7 @@
     <!-- Start Services Cards -->
     <div class=" container-fluid mt-3 pb-4">
       <div class="container-fluid backgroundContainers rounded-4 pb-3 d-flex flex-column">
-        <h2 class="align-self-center mb-3 navTextColor">Our Products</h2>
+        <h2 class="align-self-center mb-3 navTextColor solarViewDesignFont">Our Products</h2>
         <div class="container-fluid containersOnTopOfBackgroundContainers rounded-4 pb-3 pt-3 d-flex flex-column">
           <div class="row mx-2 gy-3 gy-md-3 gy-xl-5 gy-lg-4">
             <div class="col-lg-4 col-12 d-flex">
