final final final?

--- a/commerical.html
+++ b/commerical.html
@@ -89,7 +89,7 @@
             </ul>
           </div>
           <div class="col-md-4">
-            <h5>Follow Us</h5>
+            <h5 class="solarViewDesignFont">Follow Us</h5>
             <div class="d-flex">
               <ul class="nav">
                 <li class="nav-item me-2 mb-2"><a href="https://www.facebook.com/SolarViewDesign" target="_blank" class="nav-link p-0"><i
