--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 					<div class="features">
 						<article>
 							<!--portfolio-->
-							<a href="Midterm/solarviewIndex.html" target="_blank" class="image"><img src="MidtermImages/logo transparent.png"
+							<a href="Midterm/solarviewIndex.html" target="_blank" class="image"><img src="Midterm/MidtermImages/logo transparent.png"
 									alt="..."></a>
 							<div class="inner">
 								<h4>SolarViewDesign Rework</h4>
