--- a/Midterm/solarviewIndex.html
+++ b/Midterm/solarviewIndex.html
@@ -61,9 +61,7 @@
       <div class="p-5 mb-4 homeJumbotronImage rounded-3">
         <div class="container-fluid py-5">
           <h1 class="display-5 fw-bold jumbotronTextColor jumbotronTextShadow solarViewDesignFont">SolarViewDesign</h1>
-          <p class="col-md-8 fs-4 jumbotronTextColor jumbotronTextShadow">Using a series of utilities, you can create this jumbotron, just
-            like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and
-            restyle it to your liking.</p>
+          <p class="col-md-8 fs-4 jumbotronTextColor jumbotronTextShadow">Filler Spot.</p>
           <a href="mailto:info@solarviewdesign.com" class="btn moveUpBtnAboutUS btn-lg">Contact Us</a>
         </div>
       </div>
