--- a/index.html
+++ b/index.html
@@ -146,7 +146,6 @@
 					</p>
 					<div class="features">
 						<article>
-							<!--portfolio-->
 							<a href="Midterm/solarviewIndex.html" target="_blank" class="image"><img src="Midterm/MidtermImages/logo transparent.png"
 									alt="..."></a>
 							<div class="inner">
@@ -157,21 +156,12 @@
 							</div>
 						</article>
 						<!-- <article>
-							<a href="images/Resume.pdf" download class="image"><img src="images/envelop.png" alt=".."></a>
+							<a href="Midterm/solarviewIndex.html" target="_blank" class="image"><img src="Midterm/MidtermImages/logo transparent.png"
+									alt="..."></a>
 							<div class="inner">
-								<h4>Resume</h4>
+								<h4>SolarViewDesign Rework</h4>
 								<p>
-									(last updated: 9/29/2023)
-								</p>
-							</div>
-						</article> -->
-						<!-- <article>
-							<a href="https://github.com/RankenTechnicalCollege/allcoursework-Leon-JulianHoneycutt" target="_blank"
-								class="image"><img src="images/ranken.jpg" alt="."></a>
-							<div class="inner">
-								<h4>Coursework</h4>
-								<p>
-									(last updated: 9/29/2023)
+									(last updated: 10/30/2023)
 								</p>
 							</div>
 						</article> -->
