--- a/index.html
+++ b/index.html
@@ -155,16 +155,16 @@
 								</p>
 							</div>
 						</article>
-						<!-- <article>
-							<a href="Midterm/solarviewIndex.html" target="_blank" class="image"><img src="Midterm/MidtermImages/logo transparent.png"
+						<article>
+							<a href="https://leon-julianhoneycutt.github.io/Character-Storage-React/" target="_blank" class="image"><img src="images/stickman1.png"
 									alt="..."></a>
 							<div class="inner">
-								<h4>SolarViewDesign Rework</h4>
+								<h4>First React Project: Character Storage</h4>
 								<p>
-									(last updated: 10/30/2023)
+									(last updated: 12/20/2023)
 								</p>
 							</div>
-						</article> -->
+						</article>
 					</div>
 				</div>
 			</section>
