Adjustment of Character Storage title

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 							<a href="https://leon-julianhoneycutt.github.io/Character-Storage-React/" target="_blank" class="image"><img src="images/stickman1.png"
 									alt="..."></a>
 							<div class="inner">
-								<h4>First React Project: Character Storage</h4>
+								<h4>Character Storage(React Project)</h4>
 								<p>
 									(last updated: 12/20/2023)
 								</p>
